rust/template/ddlog_derive/tests/ui/fail/invalid_attr.stderr
error: unrecognized attribute, expected `rename` or `from_record`
 --> $DIR/invalid_attr.rs:7:9
  |
7 | #[ddlog(flom_record = "Foo")]
  |         ^^^^^^^^^^^

error: unrecognized attribute, expected `rename` or `into_record`
  --> $DIR/invalid_attr.rs:11:9
   |
11 | #[ddlog(into_recrd = "Bar")]
   |         ^^^^^^^^^^
